--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -2,20 +2,20 @@
     width: 100%;
     display: flex;
     align-items: center;
-    background-color: blue;
+    background: rgb(36, 78, 177);
+    background: linear-gradient(180deg, rgba(36, 78, 177, 1) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
 .Header>nav {
-    padding: 15px 30px;
+    padding: 30px 80px;
     display: flex;
     gap: 20px;
 }
 
 .Header>nav>a {
-    font-size: 35px;
+    font-size: 28px;
     color: white;
     text-decoration: none;
     border-radius: 15px;
-    padding: 0 10px 5px 10px;
-    border: solid blue;
+    padding: 7px 12px 10px 12px;
 }
