--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,14 +1,143 @@
 .Container {
     display: flex;
+    margin: 0 auto;
     gap: 20px
 }
 
-.Select {
-    background-color: aquamarine;
-    padding: 5px 10px;
-    border-radius: 15px;
+.Container>section>header {
+    font-size: 12px;
+    display: flex;
+    margin-bottom: 8px;
+    color: #8A8A89;
 }
 
-.Select:hover {
+.Select {
+    background-color: #F7F7FB;
+    padding: 5px 10px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 48px;
+    border-radius: 14px;
+    padding: 14px 18px 14px 18px;
+    font-size: 14px;
+    border: transparent;
+    appearance: none;
+    outline: transparent;
     cursor: pointer;
+    box-sizing: border-box;
+    margin-bottom: 5px;
+}
+
+.Options {
+    position: absolute;
+    height: 272px;
+    background-color: white;
+    border-radius: 14px;
+    border: 1px solid rgba(18, 20, 23, 0.05);
+    padding: 14px 8px 14px 18px;
+    overflow-y: scroll;
+    box-sizing: border-box;
+}
+
+.Options>ul {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    height: 100%;
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+::-webkit-scrollbar {
+    position: absolute;
+    right: 50px;
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: white;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #dddddd;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #3470FF;
+}
+
+.Options>ul>li {
+    color: #12141773;
+    cursor: pointer;
+    transition: color 0.3 ease;
+}
+
+.Options>ul>li:hover {
+    color: #121417
+}
+
+.Input {
+    display: flex;
+}
+
+.Input>div {
+    width: 160px;
+}
+
+.Input>div>input {
+    padding: 14px 24px 14px 75px;
+    height: 48px;
+    box-sizing: border-box;
+    max-width: 160px;
+    font-size: 14px;
+    outline: transparent;
+    background-color: #F7F7FB;
+    border-color: #8A8A8933;
+}
+
+.InputFrom {
+    border: transparent;
+    border-radius: 14px 0px 0px 14px;
+    border-right-style: solid;
+    border-right-width: 1px;
+}
+
+.InputTo {
+    border: transparent;
+    border-radius: 0px 14px 14px 0px;
+    border-left-style: solid;
+}
+
+.Input>div>span {
+    position: relative;
+    left: 20px;
+    top: -35px;
+    font-size: 14px;
+}
+
+.Buttons {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.Buttons>button {
+    width: 136px;
+    height: 48px;
+    font-weight: 600;
+    color: white;
+    border-radius: 12px;
+    background: #3470FF;
+    border: transparent;
+    transition: background-color 0.3 ease;
+    cursor: pointer;
+}
+
+.Buttons>button:hover {
+    background-color: #0B44CD;
 }
