--- a/src/components/CarList/CarList.module.css
+++ b/src/components/CarList/CarList.module.css
@@ -28,6 +28,7 @@
     width: 100%;
     justify-content: flex-end;
     padding: 15px;
+    cursor: pointer;
 }
 
 .Title {
@@ -71,7 +72,7 @@
     color: white;
     border-radius: 12px;
     border: none;
-    font-size: 20px;
+    font-size: 18px;
     transition: background-color 0.3 ease;
     cursor: pointer;
 }
