--- a/src/pages/Favorites/Favorites.module.css
+++ b/src/pages/Favorites/Favorites.module.css
@@ -8,12 +8,20 @@
     background-size: 100%;
     margin: 0 auto;
     border-radius: 40px;
+}
+
+.Image>div {
+    height: 100%;
+    border-radius: 40px;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(52, 112, 255, 0.4) 100%);
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
-.Image>h1 {
+.Image>div>h1 {
     color: white;
     font-size: 40px;
     position: relative;
