--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,3 +1,30 @@
 .Container {
-    padding: 20px;
+    padding: 40px 120px;
+}
+
+.Image {
+    width: 900px;
+    height: 420px;
+    background-size: 100%;
+    margin: 0 auto;
+    border-radius: 40px;
+}
+
+.Image>div {
+    height: 100%;
+    border-radius: 40px;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(52, 112, 255, 0.4) 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.Image>div>h1 {
+    color: white;
+    font-size: 40px;
+    position: relative;
+    bottom: 50px;
+    text-shadow: 1px 1px 2px black;
 }
