--- a/src/components/CarList/CarList.module.css
+++ b/src/components/CarList/CarList.module.css
@@ -73,7 +73,7 @@
     border-radius: 12px;
     border: none;
     font-size: 18px;
-    transition: background-color 0.3 ease;
+    transition: background-color 0.3s ease;
     cursor: pointer;
 }
 
